--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon ./server.js"
   }
 }
