--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
